clitool fix: version 1.1.1-1

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "core-module"
   ],
   "author": "Ullas Kunder",
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "bin",
+    "templates"
+  ]
 }
