--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tweety-create",
-  "version": "1.1.1-1",
+  "version": "1.1.1",
   "description": "project template generator minimal initial project code creation tool for students",
   "main": "main.js",
   "bin": {
