--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "tweety-create": "main.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "keywords": [
     "javascript",
     "nodejs",
     "core-module"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ullaskunder3/tweety-create.git"
+  },
   "author": "Ullas Kunder",
   "license": "MIT",
   "files": [
